; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_loop_legacy.c_esp_event_loop_set_cb.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_event_loop_legacy.c_esp_event_loop_set_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_event_handler_cb = common dso_local global i32 0, align 4
@s_event_ctx = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_event_loop_set_cb(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @s_event_handler_cb, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %3, align 4
  store i32 %7, i32* @s_event_handler_cb, align 4
  %8 = load i8*, i8** %4, align 8
  store i8* %8, i8** @s_event_ctx, align 8
  %9 = load i32, i32* %5, align 4
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
